--- a/app/src/main/res/layout/attendance.xml
+++ b/app/src/main/res/layout/attendance.xml
@@ -30,22 +30,28 @@
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="445dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="58dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.5">
-            <com.google.android.maps.MapView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+
+            <com.google.android.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/mapView"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:clickable="true"
                 android:apiKey="05M-7qOGbEjYduPPUdQgJt9ysL8HToawGdvu_ow"
-                />
+                android:clickable="true" />
+
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
@@ -84,19 +90,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-             android:layout_margin="10dp"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
-                android:textColor="#000000"
-                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:text="Sphinax Info Systems No. 57,
 2nd floor, Mc Nichols Road, Chetpet,
-Chennai - 600031" />
+Chennai - 600031"
+                android:textColor="#000000"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
